--- a/app/src/main/res/layout/activity_vending.xml
+++ b/app/src/main/res/layout/activity_vending.xml
@@ -493,4 +493,14 @@
 
     </FrameLayout>
 
+    <!-- Mock Mode Indicator (top-right corner) -->
+    <include
+        android:id="@+id/mockModeIndicator"
+        layout="@layout/mock_mode_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        android:layout_margin="16dp"
+        android:visibility="gone" />
+
 </FrameLayout>
