--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.WaterFountainMachine" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.WaterFountainMachine" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize Material colors -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
     
     <!-- Admin Panel Styles -->
     <style name="KeypadButtonStyle">
