--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Optimized for 55" 1080x1920 160dpi Screen (Android 11) -->
+    
+    <!-- Default screen margins -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
@@ -10,19 +12,93 @@
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_xlarge">32dp</dimen>
 
-    <!-- Text sizes for 55" kiosk -->
-    <dimen name="text_size_small">18sp</dimen>
-    <dimen name="text_size_medium">24sp</dimen>
-    <dimen name="text_size_large">32sp</dimen>
-    <dimen name="text_size_xlarge">40sp</dimen>
-    <dimen name="text_size_title">48sp</dimen>
-
-    <!-- Kiosk specific dimensions -->
-    <dimen name="keypad_button_size">120dp</dimen>
+    <!-- Main Screen Spacing -->
+    <dimen name="main_screen_padding">60dp</dimen>
+    <dimen name="content_vertical_spacing">50dp</dimen>
+    
+    <!-- Logo and Branding (Main Screen) -->
+    <dimen name="logo_size">400dp</dimen>
+    <dimen name="wordmark_width">650dp</dimen>
+    <dimen name="wordmark_height">130dp</dimen>
+    <dimen name="logo_margin_bottom">50dp</dimen>
+    <dimen name="wordmark_margin_bottom">20dp</dimen>
+    
+    <!-- Typography -->
+    <dimen name="text_size_small">22sp</dimen>
+    <dimen name="text_size_medium">28sp</dimen>
+    <dimen name="text_size_large">38sp</dimen>
+    <dimen name="text_size_xlarge">48sp</dimen>
+    <dimen name="text_size_tagline">42sp</dimen>
+    <dimen name="text_size_instruction">56sp</dimen>
+    <dimen name="text_size_title">56sp</dimen>
+    <dimen name="text_size_subtitle">38sp</dimen>
+    <dimen name="text_size_body">28sp</dimen>
+    <dimen name="text_size_button">32sp</dimen>
+    <dimen name="text_size_keypad">48sp</dimen>
+    
+    <!-- Header -->
+    <dimen name="header_height">110dp</dimen>
+    <dimen name="header_margin_bottom">50dp</dimen>
+    <dimen name="header_logo_size">110dp</dimen>
+    <dimen name="header_wordmark_width">330dp</dimen>
+    <dimen name="header_wordmark_height">66dp</dimen>
+    <dimen name="back_button_size">100dp</dimen>
+    <dimen name="back_button_padding">20dp</dimen>
+    
+    <!-- Keypad -->
+    <dimen name="keypad_button_size">110dp</dimen>
     <dimen name="keypad_button_margin">12dp</dimen>
-    <dimen name="phone_display_height">80dp</dimen>
-    <dimen name="phone_display_text_size">36sp</dimen>
-    <dimen name="header_height">120dp</dimen>
-    <dimen name="content_padding">60dp</dimen>
+    <dimen name="keypad_elevation">6dp</dimen>
+    
+    <!-- Phone Input Display -->
+    <dimen name="phone_display_height">85dp</dimen>
+    <dimen name="phone_display_text_size">44sp</dimen>
+    <dimen name="phone_display_margin_bottom">35dp</dimen>
+    
+    <!-- Action Buttons -->
+    <dimen name="action_button_width">300dp</dimen>
+    <dimen name="action_button_height">85dp</dimen>
+    <dimen name="action_button_text_size">32sp</dimen>
+    <dimen name="action_button_margin">12dp</dimen>
+    
+    <!-- Question Mark Button -->
+    <dimen name="question_button_size">160dp</dimen>
+    <dimen name="question_button_bottom_margin">45dp</dimen>
+    <dimen name="question_icon_size">64sp</dimen>
+    
+    <!-- Modal -->
+    <dimen name="modal_width">650dp</dimen>
+    <dimen name="modal_padding">45dp</dimen>
+    <dimen name="modal_title_size">36sp</dimen>
+    <dimen name="modal_text_size">26sp</dimen>
+    <dimen name="modal_button_text_size">30sp</dimen>
+    
+    <!-- Cards and Containers (for Vending Activity) -->
+    <dimen name="card_width">400dp</dimen>
+    <dimen name="card_height">480dp</dimen>
+    <dimen name="card_corner_radius">16dp</dimen>
+    <dimen name="card_elevation">6dp</dimen>
+    <dimen name="card_padding">40dp</dimen>
+    <dimen name="card_margin">16dp</dimen>
+    <dimen name="card_icon_size">140dp</dimen>
+    <dimen name="card_title_size">40sp</dimen>
+    <dimen name="card_subtitle_size">26sp</dimen>
+    <dimen name="card_text_size">22sp</dimen>
+    
+    <!-- Admin Panel -->
+    <dimen name="admin_button_height">56dp</dimen>
+    <dimen name="admin_button_text_size">16sp</dimen>
+    <dimen name="admin_input_height">52dp</dimen>
+    <dimen name="admin_input_text_size">16sp</dimen>
+    
+    <!-- Touch Targets (minimum 48dp for accessibility) -->
+    <dimen name="min_touch_target">72dp</dimen>
+    
+    <!-- Status Indicator -->
+    <dimen name="status_indicator_size">36dp</dimen>
+    <dimen name="status_indicator_margin">12dp</dimen>
+    
+    <!-- Legacy compatibility -->
+    <dimen name="content_padding">40dp</dimen>
 </resources>
 
