--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -55,13 +55,12 @@
                     android:contentDescription="@string/waterfountain_logo"
                     android:scaleType="fitCenter" />
 
-                <ImageView
-                    android:layout_width="400dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/white_word_mark"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/wordmark_text"
                     android:contentDescription="@string/waterfountain_wordmark"
-                    android:scaleType="fitCenter"
-                    android:adjustViewBounds="true"/>
+                    style="@style/WordmarkTextStyle.Medium" />
 
             </LinearLayout>
 
